Ajout de l'animation tick et optimisation diverses

--- a/index.html
+++ b/index.html
@@ -75,17 +75,19 @@
               alt="La Palette du Goût"
             />
             <span class="restaurant__status">Nouveau</span>
-            <div class="restaurant__text__box">
-              <h3 class="restaurant__name">La Palette du Goût</h3>
-            </a>
-              <div class="restaurant__icon__box">
-                <i class="restaurant__icon fa-regular fa-heart"></i>
-                <i
-                  class="restaurant__icon restaurant__icon--full fa-solid fa-heart"
-                ></i>
-              </div>
+          </a>
+          <div class="restaurant__text__box">
+            <a href="la_palette_du_gout.html" class="restaurant__box__link"
+              ><h3 class="restaurant__name">La Palette du Goût</h3></a
+            >
+            <div class="restaurant__icon__box">
+              <i class="restaurant__icon fa-regular fa-heart"></i>
+              <i
+                class="restaurant__icon restaurant__icon--full fa-solid fa-heart"
+              ></i>
             </div>
-            <p class="restaurant__description">Ménilmontant</p>
+          </div>
+          <p class="restaurant__description">Ménilmontant</p>
         </div>
         <div class="restaurant__box">
           <a href="la_note_enchantee.html" class="restaurant__box__link">
@@ -95,56 +97,61 @@
               class="restaurant__img"
               alt="La Note Enchantée"
             />
-            <div class="restaurant__text__box">
-              <h3 class="restaurant__name">La Note Enchantée</h3>
-            </a>
-              <div class="restaurant__icon__box">
-                <i class="restaurant__icon fa-regular fa-heart"></i>
-                <i
-                  class="restaurant__icon restaurant__icon--full fa-solid fa-heart"
-                ></i>
-              </div>
+          </a>
+          <div class="restaurant__text__box">
+            <a href="la_note_enchantee.html" class="restaurant__box__link"
+              ><h3 class="restaurant__name">La Note Enchantée</h3></a
+            >
+            <div class="restaurant__icon__box">
+              <i class="restaurant__icon fa-regular fa-heart"></i>
+              <i
+                class="restaurant__icon restaurant__icon--full fa-solid fa-heart"
+              ></i>
             </div>
-            <p class="restaurant__description">Charonne</p>
+          </div>
+          <p class="restaurant__description">Charonne</p>
         </div>
         <div class="restaurant__box">
-          <a href="a_la_francaise.html">
+          <a href="a_la_francaise.html" class="restaurant__box__link">
             <img
               src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
               class="restaurant__img"
               alt="À la Française"
             />
-            <div class="restaurant__text__box">
-              <h3 class="restaurant__name">À la Française</h3>
-            </a>
-              <div class="restaurant__icon__box">
-                <i class="restaurant__icon fa-regular fa-heart"></i>
-                <i
-                  class="restaurant__icon restaurant__icon--full fa-solid fa-heart"
-                ></i>
-              </div>
+          </a>
+          <div class="restaurant__text__box">
+            <a href="a_la_francaise.html" class="restaurant__box__link"
+              ><h3 class="restaurant__name">À la Française</h3></a
+            >
+            <div class="restaurant__icon__box">
+              <i class="restaurant__icon fa-regular fa-heart"></i>
+              <i
+                class="restaurant__icon restaurant__icon--full fa-solid fa-heart"
+              ></i>
             </div>
-            <p class="restaurant__description">Cité rouge</p>
-
+          </div>
+          <p class="restaurant__description">Cité rouge</p>
         </div>
         <div class="restaurant__box">
-          <a href="le_delice_des_sens.html">
+          <a href="le_delice_des_sens.html" class="restaurant__box__link">
             <img
               src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
               class="restaurant__img"
               alt="Le Délice des sens"
             />
-            <div class="restaurant__text__box">
-              <h3 class="restaurant__name">Le Délice des sens</h3>
-            </a>
-              <div class="restaurant__icon__box">
-                <i class="restaurant__icon fa-regular fa-heart"></i>
-                <i
-                  class="restaurant__icon restaurant__icon--full fa-solid fa-heart"
-                ></i>
-              </div>
+          </a>
+          <div class="restaurant__text__box">
+            <a href="le_delice_des_sens.html" class="restaurant__box__link"
+              ><h3 class="restaurant__name">Le Délice des sens</h3></a
+            >
+            <div class="restaurant__icon__box">
+              <i class="restaurant__icon fa-regular fa-heart"></i>
+              <i
+                class="restaurant__icon restaurant__icon--full fa-solid fa-heart"
+              ></i>
             </div>
-            <p class="restaurant__description">Folie-Méricourt</p>
+          </div>
+          <p class="restaurant__description">Folie-Méricourt</p>
         </div>
       </div>
     </main>
@@ -165,7 +172,9 @@
           <p class="footer__box__container__text">Devenir partenaire</p>
         </div>
         <p class="footer__box__text">Mentions légales</p>
-        <a href="mailto:contact@ohmyfood.com"><p class="footer__box__text">Contact</p></a>
+        <a href="mailto:contact@ohmyfood.com"
+          ><p class="footer__box__text">Contact</p></a
+        >
       </div>
     </footer>
   </body>
