--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -53,41 +53,71 @@
             <span class="list__plats__title__sub">ENTR</span>ÉES
           </p>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Ravioles de foie gras</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Accompagnés de leur crème à la truffe
-              </p>
-              <p class="list__plats__cards__box__prix">25€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Ravioles de foie gras</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Accompagnés de leur crème à la truffe
+                </p>
+                <p class="list__plats__cards__box__prix">25€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Caviar osciètre</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Sur blini à la farine de blé noir
-              </p>
-              <p class="list__plats__cards__box__prix">35€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Caviar osciètre</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Sur blini à la farine de blé noir
+                </p>
+                <p class="list__plats__cards__box__prix">35€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Homard et espuma de potiron</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Mariné aux zestes d'orange
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">
+                Homard et espuma de potiron
               </p>
-              <p class="list__plats__cards__box__prix">20€</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Mariné aux zestes d'orange
+                </p>
+                <p class="list__plats__cards__box__prix">20€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards list__plats__cards--last">
-            <p class="list__plats__cards__title">
-              Foie gras de canard cuit entier
-            </p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Confiture de figue et pain toasté tes d'orange
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">
+                Foie gras de canard cuit entier
               </p>
-              <p class="list__plats__cards__box__prix">35€</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Confiture de figue et pain toasté tes d'orange
+                </p>
+                <p class="list__plats__cards__box__prix">35€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <!-- Plats -->
@@ -95,32 +125,53 @@
             <span class="list__plats__title__sub">PLAT</span>S
           </p>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">
-              Noix de coquilles Saint-Jacques
-            </p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Sur lit de purée de céleri-rave
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">
+                Noix de coquilles Saint-Jacques
               </p>
-              <p class="list__plats__cards__box__prix">40€</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Sur lit de purée de céleri-rave
+                </p>
+                <p class="list__plats__cards__box__prix">40€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Langoustine poêlée</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Purée de patate douce
-              </p>
-              <p class="list__plats__cards__box__prix">35€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Langoustine poêlée</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Purée de patate douce
+                </p>
+                <p class="list__plats__cards__box__prix">35€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards list__plats__cards--last">
-            <p class="list__plats__cards__title">Mijoté de queue de boeuf</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Et riz sauvage aux zestes de citron
-              </p>
-              <p class="list__plats__cards__box__prix">44€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Mijoté de queue de boeuf</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Et riz sauvage aux zestes de citron
+                </p>
+                <p class="list__plats__cards__box__prix">44€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <!-- Desserts -->
@@ -128,30 +179,51 @@
             <span class="list__plats__title__sub">DESS</span>ERTS
           </p>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">
-              Macaron noisette et chocolat
-            </p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Glace au caramel brun et sel de Guérande
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">
+                Macaron noisette et chocolat
               </p>
-              <p class="list__plats__cards__box__prix">18€</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Glace au caramel brun et sel de Guérande
+                </p>
+                <p class="list__plats__cards__box__prix">18€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Baba au rhum revisité</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Avec son coulis de citron
-              </p>
-              <p class="list__plats__cards__box__prix">22€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Baba au rhum revisité</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Avec son coulis de citron
+                </p>
+                <p class="list__plats__cards__box__prix">22€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards list__plats__cards--last">
-            <p class="list__plats__cards__title">Tarte au citron meringuée</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">Déstructurée</p>
-              <p class="list__plats__cards__box__prix">23€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Tarte au citron meringuée</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">Déstructurée</p>
+                <p class="list__plats__cards__box__prix">23€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
         </div>
