--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -53,30 +53,53 @@
             <span class="list__plats__title__sub">ENTR</span>ÉES
           </p>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Fricassée d'escargot</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Au piment d'espelette
-              </p>
-              <p class="list__plats__cards__box__prix">25€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Fricassée d'escargot</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Au piment d'espelette
+                </p>
+                <p class="list__plats__cards__box__prix">25€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Foie gras de canard mi-cuit</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Et ses copeaux de truffe noire
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">
+                Foie gras de canard mi-cuit
               </p>
-              <p class="list__plats__cards__box__prix">35€</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Et ses copeaux de truffe noire
+                </p>
+                <p class="list__plats__cards__box__prix">35€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards list__plats__cards--last">
-            <p class="list__plats__cards__title">Oeuf au plat</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Assaisonné à la truffe sur lit de caviar
-              </p>
-              <p class="list__plats__cards__box__prix">20€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Oeuf au plat</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Assaisonné à la truffe sur lit de caviar
+                </p>
+                <p class="list__plats__cards__box__prix">20€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <!-- Plats -->
@@ -84,30 +107,51 @@
             <span class="list__plats__title__sub">PLAT</span>S
           </p>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Filet de boeuf aux herbes</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Accompagné de sa ribambelle de légumes
-              </p>
-              <p class="list__plats__cards__box__prix">40€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Filet de boeuf aux herbes</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Accompagné de sa ribambelle de légumes
+                </p>
+                <p class="list__plats__cards__box__prix">40€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">
-              Parmentier de queue de boeuf
-            </p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                À la truffe noire sur sa purée de panais
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">
+                Parmentier de queue de boeuf
               </p>
-              <p class="list__plats__cards__box__prix">35€</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  À la truffe noire sur sa purée de panais
+                </p>
+                <p class="list__plats__cards__box__prix">35€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards list__plats__cards--last">
-            <p class="list__plats__cards__title">Filet de turbot</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">Aux agrumes</p>
-              <p class="list__plats__cards__box__prix">44€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Filet de turbot</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">Aux agrumes</p>
+                <p class="list__plats__cards__box__prix">44€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <!-- Desserts -->
@@ -115,30 +159,51 @@
             <span class="list__plats__title__sub">DESS</span>ERTS
           </p>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Paris-Brest</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">Revisité</p>
-              <p class="list__plats__cards__box__prix">18€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Paris-Brest</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">Revisité</p>
+                <p class="list__plats__cards__box__prix">18€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">
-              Macaron au chocolat d'exception
-            </p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Et glace à la vanille de Madagascar
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">
+                Macaron au chocolat d'exception
               </p>
-              <p class="list__plats__cards__box__prix">22€</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Et glace à la vanille de Madagascar
+                </p>
+                <p class="list__plats__cards__box__prix">22€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards list__plats__cards--last">
-            <p class="list__plats__cards__title">Mousse au chocolat</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Au piment d'Espelette et à la truffe noire
-              </p>
-              <p class="list__plats__cards__box__prix">23€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Mousse au chocolat</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Au piment d'Espelette et à la truffe noire
+                </p>
+                <p class="list__plats__cards__box__prix">23€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
         </div>
