--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -53,30 +53,51 @@
             <span class="list__plats__title__sub">ENTR</span>ÉES
           </p>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Tartare de thon</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Assaisonné au yuzu
-              </p>
-              <p class="list__plats__cards__box__prix">25€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Tartare de thon</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Assaisonné au yuzu
+                </p>
+                <p class="list__plats__cards__box__prix">25€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">
-              Bouchée de homard croustillant
-            </p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Et sa farandole de petits légumes
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">
+                Bouchée de homard croustillant
               </p>
-              <p class="list__plats__cards__box__prix">35€</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Et sa farandole de petits légumes
+                </p>
+                <p class="list__plats__cards__box__prix">35€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards list__plats__cards--last">
-            <p class="list__plats__cards__title">Velouté de cèpes</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">Aux truffes</p>
-              <p class="list__plats__cards__box__prix">20€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Velouté de cèpes</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">Aux truffes</p>
+                <p class="list__plats__cards__box__prix">20€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <!-- Plats -->
@@ -84,32 +105,53 @@
             <span class="list__plats__title__sub">PLAT</span>S
           </p>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">
-              Poulet rôti aux herbes de Provence
-            </p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Et sa crème de truffe
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">
+                Poulet rôti aux herbes de Provence
               </p>
-              <p class="list__plats__cards__box__prix">40€</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Et sa crème de truffe
+                </p>
+                <p class="list__plats__cards__box__prix">40€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Langouste rôtie</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Et ses légumes de saison
-              </p>
-              <p class="list__plats__cards__box__prix">35€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Langouste rôtie</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Et ses légumes de saison
+                </p>
+                <p class="list__plats__cards__box__prix">35€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards list__plats__cards--last">
-            <p class="list__plats__cards__title">Côte de boeuf Angus</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Et sa purée de panais
-              </p>
-              <p class="list__plats__cards__box__prix">44€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Côte de boeuf Angus</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Et sa purée de panais
+                </p>
+                <p class="list__plats__cards__box__prix">44€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <!-- Desserts -->
@@ -117,24 +159,47 @@
             <span class="list__plats__title__sub">DESS</span>ERTS
           </p>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Farandole de desserts</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">Du chef</p>
-              <p class="list__plats__cards__box__prix">18€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Farandole de desserts</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">Du chef</p>
+                <p class="list__plats__cards__box__prix">18€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Crème brulée</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">Revisitée</p>
-              <p class="list__plats__cards__box__prix">22€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Crème brulée</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">Revisitée</p>
+                <p class="list__plats__cards__box__prix">22€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards list__plats__cards--last">
-            <p class="list__plats__cards__title">Tiramisu</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">À la noisette</p>
-              <p class="list__plats__cards__box__prix">23€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Tiramisu</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  À la noisette
+                </p>
+                <p class="list__plats__cards__box__prix">23€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
         </div>
