--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -53,28 +53,51 @@
             <span class="list__plats__title__sub">ENTR</span>ÉES
           </p>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Tartare de poulpe acidulé</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Aux zestes d'orange
-              </p>
-              <p class="list__plats__cards__box__prix">25€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Tartare de poulpe acidulé</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Aux zestes d'orange
+                </p>
+                <p class="list__plats__cards__box__prix">25€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Velouté de légumes d'antan</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Carotte, panais, topinambour
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">
+                Velouté de légumes d'antan
               </p>
-              <p class="list__plats__cards__box__prix">35€</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Carotte, panais, topinambour
+                </p>
+                <p class="list__plats__cards__box__prix">35€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
-          <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Soupe à l'oignon</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">Revisitée</p>
-              <p class="list__plats__cards__box__prix">20€</p>
+          <div class="list__plats__cards list__plats__cards--last">
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Soupe à l'oignon</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">Revisitée</p>
+                <p class="list__plats__cards__box__prix">20€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <!-- Plats -->
@@ -82,32 +105,53 @@
             <span class="list__plats__title__sub">PLAT</span>S
           </p>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Coquilles Saint-Jacques</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Accompagnées d'une purée de panais
-              </p>
-              <p class="list__plats__cards__box__prix">40€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Coquilles Saint-Jacques</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Accompagnées d'une purée de panais
+                </p>
+                <p class="list__plats__cards__box__prix">40€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Magret de canard</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Et parmentier de pommes de terre
-              </p>
-              <p class="list__plats__cards__box__prix">35€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Magret de canard</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Et parmentier de pommes de terre
+                </p>
+                <p class="list__plats__cards__box__prix">35€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards list__plats__cards--last">
-            <p class="list__plats__cards__title">
-              Pigeonneau d’Ille-et-Vilaine
-            </p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Sur son lit de gnocchis aux légumes
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">
+                Pigeonneau d’Ille-et-Vilaine
               </p>
-              <p class="list__plats__cards__box__prix">44€</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Sur son lit de gnocchis aux légumes
+                </p>
+                <p class="list__plats__cards__box__prix">44€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <!-- Desserts -->
@@ -115,28 +159,51 @@
             <span class="list__plats__title__sub">DESS</span>ERTS
           </p>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Pétales de violettes glacés</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Et purée de noisettes
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">
+                Pétales de violettes glacés
               </p>
-              <p class="list__plats__cards__box__prix">18€</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Et purée de noisettes
+                </p>
+                <p class="list__plats__cards__box__prix">18€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards">
-            <p class="list__plats__cards__title">Fondant au chocolat</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">Revisité</p>
-              <p class="list__plats__cards__box__prix">22€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Fondant au chocolat</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">Revisité</p>
+                <p class="list__plats__cards__box__prix">22€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
           <div class="list__plats__cards list__plats__cards--last">
-            <p class="list__plats__cards__title">Millefeuille croustillant</p>
-            <div class="list__plats__cards__box">
-              <p class="list__plats__cards__box__description">
-                Myrtilles et pâte d’amande
-              </p>
-              <p class="list__plats__cards__box__prix">23€</p>
+            <div class="list__plats__cards__left">
+              <p class="list__plats__cards__title">Millefeuille croustillant</p>
+              <div class="list__plats__cards__box">
+                <p class="list__plats__cards__box__description">
+                  Myrtilles et pâte d’amande
+                </p>
+                <p class="list__plats__cards__box__prix">23€</p>
+              </div>
+            </div>
+            <div class="list__plats__cards__tickbox">
+              <i
+                class="fas fa-check-circle list__plats__cards__tickbox__icon"
+              ></i>
             </div>
           </div>
         </div>
