Debug et rajout du responsive

--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -111,7 +111,7 @@
                 <p class="list__plats__cards__box__description">
                   Confiture de figue et pain toasté tes d'orange
                 </p>
-                <p class="list__plats__cards__box__prix">35€</p>
+                <span class="list__plats__cards__box__prix">35€</span>
               </div>
             </div>
             <div class="list__plats__cards__tickbox">
